--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -57,6 +57,7 @@
 /extensions/figma-files                              @michaelschultz
 /extensions/file-manager                             @es183923
 /extensions/flow                                     @vimtor
+/extensions/flutter-pub-dev-search                   @prasadsunny1
 /extensions/git-repos                                @moored
 /extensions/github-for-enterprise                    @kinbaum
 /extensions/github-repository-search                 @thomas
