--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -160,6 +160,7 @@
 /extensions/visual-studio-code-recent-projects       @thomas
 /extensions/weather                                  @tonka3000
 /extensions/whatsapp                                 @vimtor
+/extensions/wistia                                   @darin
 /extensions/xcode                                    @sventiigi
 /extensions/xkcd                                     @maggie
 /extensions/youdao-translate                         @tiancheng92
