--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -98,6 +98,34 @@
       "subtitle": "Home Assistant",
       "description": "Query Motion Sensors",
       "mode": "view"
+    },
+    {
+      "name": "vacuums",
+      "title": "Vacuum Cleaners",
+      "subtitle": "Home Assistant",
+      "description": "Query Vacuum Cleaners",
+      "mode": "view"
+    },
+    {
+      "name": "cameras",
+      "title": "Cameras",
+      "subtitle": "Home Assistant",
+      "description": "Query Cameras",
+      "mode": "view"
+    },
+    {
+      "name": "scripts",
+      "title": "Scripts",
+      "subtitle": "Home Assistant",
+      "description": "Query Scripts",
+      "mode": "view"
+    },
+    {
+      "name": "buttons",
+      "title": "Buttons",
+      "subtitle": "Home Assistant",
+      "description": "Query Buttons",
+      "mode": "view"
     }
   ],
   "preferences": [
