--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -86,6 +86,7 @@
 /extensions/linguee                                  @geekdada
 /extensions/lobsters                                 @dev99problems
 /extensions/lorem-ipsum                              @antonniklasson
+/extensions/markdown-reference                       @codedbyjordan
 /extensions/microsoft-edge                           @kartikkumarsahoo @bromanko
 /extensions/mldocs                                   @reckoning-dev
 /extensions/music                                    @fedevitaledev
