--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -148,6 +148,7 @@
 /extensions/toolbox                                  @kang
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @fezvrasta
+/extensions/tunnelblick                              @samuelnitsche
 /extensions/tuple                                    @inxilpro
 /extensions/twitch                                   @dieserrobin
 /extensions/twitter                                  @tonka3000
