--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -67,6 +67,7 @@
 /extensions/google-chrome                            @codely @bromanko
 /extensions/google-chrome-profiles                   @frouo
 /extensions/google-maps-search                       @ratoru
+/extensions/google-search                            @mblode
 /extensions/google-translate                         @ospfranco
 /extensions/google-trends                            @kang
 /extensions/grafana                                  @francois
