Code Owner: create ampping between raycast and github

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,109 +3,109 @@
 /extensions/1password7                               @khasbilegt
 /extensions/airport                                  @siddharthsharma94
 /extensions/algolia                                  @valentindotxyz
-/extensions/amazon-aws                               @falcon @hodglim
-/extensions/api-icon-list                            @petr
+/extensions/amazon-aws                               @victor-falcon @Hodglim
+/extensions/api-icon-list                            @PitNikola
 /extensions/atomic                                   @joepio
 /extensions/authy                                    @guga4ka
-/extensions/base64                                   @danielsinclair
+/extensions/base64                                   @DanielSinclair
 /extensions/bear                                     @hmarr
 /extensions/biaodian                                 @gasolin
 /extensions/binance                                  @grzegorzkrukowski
-/extensions/bitbucket                                @francois
+/extensions/bitbucket                                @Lp-Francois
 /extensions/bitly-url-shortener                      @blessanm86
 /extensions/bitrise                                  @ubuntudroid
 /extensions/bitwarden                                @pomdtr
 /extensions/brew                                     @nhojb
 /extensions/brew-services                            @es183923
-/extensions/bugmenot                                 @yukai
+/extensions/bugmenot                                 @Yukaii
 /extensions/buildkite                                @mskelton
 /extensions/calendar                                 @fuksman
 /extensions/calendly                                 @eluce2
 /extensions/can-i-use                                @thomaslombart
-/extensions/canvascast                               @yoda
+/extensions/canvascast                               @YodaLightsabr
 /extensions/change-case                              @es183923
 /extensions/change-scroll-direction                  @gregoralbrecht
 /extensions/circle-ci                                @qeude
-/extensions/clash                                    @go2sheep
-/extensions/cleanshotx                               @aayush9029
-/extensions/clockify                                 @isma
+/extensions/clash                                    @ciiiii
+/extensions/cleanshotx                               @Aayush9029
+/extensions/clockify                                 @ismamz
 /extensions/coffee                                   @mooxl
 /extensions/coinbase-pro                             @farisaziz12
-/extensions/coingecko                                @destiner
-/extensions/coinmarketcap-crypto-crawler             @sonicspark
+/extensions/coingecko                                @Destiner
+/extensions/coinmarketcap-crypto-crawler             @moojing
 /extensions/commitlint                               @lardissone
-/extensions/consoledev                               @fedevitaledev
+/extensions/consoledev                               @splash-cli
 /extensions/conventional-comments                    @krzysztofzuraw
 /extensions/copy-gcp-icons                           @pomdtr
-/extensions/cratecast                                @matt
+/extensions/cratecast                                @gleich
 /extensions/cricketcast                              @sampoder
 /extensions/css-gg                                   @astrit
-/extensions/dash                                     @rso
-/extensions/days-until-christmas                     @megapixel23
-/extensions/debank                                   @yukai
+/extensions/dash                                     @RSO
+/extensions/days-until-christmas                     @MEGApixel23
+/extensions/debank                                   @Yukaii
 /extensions/deepcast                                 @mooxl
 /extensions/devdocs                                  @pomdtr
 /extensions/displayplacer                            @eluce2
 /extensions/docker                                   @priithaamer
-/extensions/domainr                                  @fedevitaledev
-/extensions/doppler-share-secrets                    @thomas
-/extensions/elgato-key-light                         @thomas
-/extensions/emoji                                    @fezvrasta
-/extensions/ens-name-lookup                          @yukai
-/extensions/envato                                   @astroon
+/extensions/domainr                                  @splash-cli
+/extensions/doppler-share-secrets                    @thomaspaulmann
+/extensions/elgato-key-light                         @thomaspaulmann
+/extensions/emoji                                    @FezVrasta
+/extensions/ens-name-lookup                          @Yukaii
+/extensions/envato                                   @Slllava
 /extensions/everhour                                 @farisaziz12
-/extensions/figma-files                              @michaelschultz
+/extensions/figma-files                              @michaelwschultz
 /extensions/file-manager                             @es183923
 /extensions/flow                                     @vimtor
 /extensions/flutter-pub-dev-search                   @prasadsunny1
 /extensions/git-repos                                @moored
-/extensions/github-for-enterprise                    @kinbaum
-/extensions/github-repository-search                 @thomas
+/extensions/github-for-enterprise                    @Kinbaum
+/extensions/github-repository-search                 @thomaspaulmann
 /extensions/github-stars                             @mrmartineau
 /extensions/gitlab                                   @tonka3000
 /extensions/gitmoji                                  @ricoberger
-/extensions/google-chrome                            @codely @bromanko
+/extensions/google-chrome                            @rgomezcasas @grzegorzkrukowski
 /extensions/google-chrome-profiles                   @frouo
 /extensions/google-maps-search                       @ratoru
 /extensions/google-search                            @mblode
 /extensions/google-translate                         @ospfranco
-/extensions/google-trends                            @kang
-/extensions/grafana                                  @francois
-/extensions/hacker-news                              @thomas
+/extensions/google-trends                            @kkange
+/extensions/grafana                                  @Lp-Francois
+/extensions/hacker-news                              @thomaspaulmann
 /extensions/harvest                                  @eluce2
 /extensions/hazeover                                 @ratoru
 /extensions/hexlify                                  @gkpln3
 /extensions/homeassistant                            @tonka3000
-/extensions/huggingcast                              @ragnor
-/extensions/imdb                                     @ryan
+/extensions/huggingcast                              @ragnorc
+/extensions/imdb                                     @ryan-exe
 /extensions/jetbrains                                @gdsmith
-/extensions/json-format                              @destiner
+/extensions/json-format                              @Destiner
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
 /extensions/laravel-livewire                         @tafhyseni
-/extensions/large-type                               @gbarba
-/extensions/lark                                     @tmk
+/extensions/large-type                               @gon250
+/extensions/lark                                     @tmkx
 /extensions/linguee                                  @geekdada
 /extensions/lobsters                                 @dev99problems
-/extensions/lorem-ipsum                              @antonniklasson
+/extensions/lorem-ipsum                              @AntonNiklasson
 /extensions/markdown-reference                       @codedbyjordan
-/extensions/microsoft-edge                           @kartikkumarsahoo @bromanko
-/extensions/mldocs                                   @reckoning-dev
-/extensions/music                                    @fedevitaledev
-/extensions/myip                                     @kang
-/extensions/netlify                                  @destiner
-/extensions/notion                                   @henrichabrand
-/extensions/obsidian                                 @marcjulian
+/extensions/microsoft-edge                           @KartikKumarSahoo @grzegorzkrukowski
+/extensions/mldocs                                   @sadanand-singh
+/extensions/music                                    @splash-cli
+/extensions/myip                                     @kkange
+/extensions/netlify                                  @Destiner
+/extensions/notion                                   @HenriChabrand
+/extensions/obsidian                                 @marcjulianschwarz
 /extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
-/extensions/party-parrot                             @thomas
+/extensions/party-parrot                             @thomaspaulmann
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
-/extensions/polished                                 @lekoarts
+/extensions/polished                                 @LekoArts
 /extensions/productboard                             @honzatmn
-/extensions/producthunt                              @ragnor
-/extensions/qr-code-scanner                          @stevenrce0
+/extensions/producthunt                              @ragnorc
+/extensions/qr-code-scanner                          @StevenRCE0
 /extensions/quick-open-project                       @zerowidth
 /extensions/quick-search                             @iwfan
 /extensions/radix                                    @peduarte
@@ -113,60 +113,60 @@
 /extensions/raindrop                                 @lardissone
 /extensions/random-data-generator                    @loris
 /extensions/random-email                             @rkjaer
-/extensions/ray-so                                   @garrett
+/extensions/ray-so                                   @gt-codes
 /extensions/rebrandly                                @grikomsn
 /extensions/ricescore                                @tonka3000
 /extensions/rss-reader                               @fuksman
-/extensions/sabnzbd                                  @jns
+/extensions/sabnzbd                                  @jesse-c
 /extensions/safari                                   @loris
-/extensions/script-commands                          @tholanda
+/extensions/script-commands                          @unnamedd
 /extensions/script-kit                               @pomdtr
 /extensions/search-mdn                               @krzysztofzuraw
-/extensions/search-notion                            @reckoning-dev
+/extensions/search-notion                            @sadanand-singh
 /extensions/search-npm                               @mrmartineau
 /extensions/search-rubygems                          @aleks
 /extensions/send-to-flomo                            @ahonn
 /extensions/sf-symbols-search                        @peteschaffner
-/extensions/simpread                                 @kenshin
+/extensions/simpread                                 @Kenshin
 /extensions/single-disk-eject                        @johndturn
 /extensions/sketch                                   @aesign
-/extensions/slack-status                             @petr
+/extensions/slack-status                             @PitNikola
 /extensions/snake                                    @tonka3000
 /extensions/speedtest                                @tonka3000
-/extensions/spotify-controls                         @thomas
+/extensions/spotify-controls                         @thomaspaulmann
 /extensions/spotify-player                           @mattisssa
-/extensions/stackoverflow                            @reckoning-dev
+/extensions/stackoverflow                            @sadanand-singh
 /extensions/surge                                    @ysj151215
-/extensions/swift-evolution                          @bprog
+/extensions/swift-evolution                          @BProg
 /extensions/switchhosts                              @tiancheng92
 /extensions/tableplus                                @pernielsentikaer
 /extensions/tailwindcss                              @vimtor
 /extensions/terminalfinder                           @yedongze
 /extensions/things                                   @loris
-/extensions/ticktick                                 @appest
+/extensions/ticktick                                 @viduycheung
 /extensions/tldr                                     @pomdtr
-/extensions/todo-list                                @maggie
+/extensions/todo-list                                @maggie-j-liu
 /extensions/todoist                                  @thomaslombart
-/extensions/toolbox                                  @kang
+/extensions/toolbox                                  @kkange
 /extensions/tower                                    @tdwesten
-/extensions/transmission                             @fezvrasta
-/extensions/tunnelblick                              @samuelnitsche
+/extensions/transmission                             @FezVrasta
+/extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
-/extensions/twitch                                   @dieserrobin
+/extensions/twitch                                   @dieserRobin
 /extensions/twitter                                  @tonka3000
 /extensions/two-factor-authentication-code-generator @cjdenio
 /extensions/unicode-symbols                          @mmazzarolo
-/extensions/unix-timestamp                           @destiner
+/extensions/unix-timestamp                           @Destiner
 /extensions/uuid-generator                           @jmaeso
 /extensions/vault                                    @ricoberger
-/extensions/vercast                                  @matt
-/extensions/visual-studio-code-project-manager       @markuslanger
-/extensions/visual-studio-code-recent-projects       @thomas
+/extensions/vercast                                  @gleich
+/extensions/visual-studio-code-project-manager       @MarkusLanger
+/extensions/visual-studio-code-recent-projects       @thomaspaulmann
 /extensions/weather                                  @tonka3000
 /extensions/whatsapp                                 @vimtor
-/extensions/wistia                                   @darin
-/extensions/xcode                                    @sventiigi
-/extensions/xkcd                                     @maggie
+/extensions/wistia                                   @ddoria921
+/extensions/xcode                                    @SvenTiigi
+/extensions/xkcd                                     @maggie-j-liu
 /extensions/youdao-translate                         @tiancheng92
 /extensions/youtube                                  @tonka3000
-/extensions/zotero                                   @reckoning-dev
+/extensions/zotero                                   @sadanand-singh
