--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -80,6 +80,7 @@
 /extensions/huggingcast                              @ragnorc
 /extensions/imdb                                     @ryan-exe
 /extensions/jetbrains                                @gdsmith
+/extensions/jira-search                              @svenwiegand
 /extensions/json-format                              @Destiner
 /extensions/kill-process                             @rolandleth
 /extensions/kinopoisk                                @mattisssa
