--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,7 +26,7 @@
 /extensions/canvascast                               @YodaLightsabr
 /extensions/change-case                              @es183923
 /extensions/change-scroll-direction                  @gregoralbrecht
-/extensions/circle-ci                                @qeude
+/extensions/circle-ci                                @qeude @kudrykv
 /extensions/clash                                    @ciiiii
 /extensions/cleanshotx                               @Aayush9029
 /extensions/clockify                                 @ismamz
