--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -95,6 +95,7 @@
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mldocs                                   @sadanand-singh
 /extensions/music                                    @splash-cli
+/extensions/must                                     @eggsy
 /extensions/myip                                     @kkange
 /extensions/netlify                                  @Destiner
 /extensions/notion                                   @HenriChabrand
