--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -106,6 +106,7 @@
 /extensions/party-parrot                             @thomaspaulmann
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
+/extensions/ploi                                     @Cannonb4ll
 /extensions/polished                                 @LekoArts
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
