--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -123,6 +123,7 @@
 /extensions/random-email                             @rkjaer
 /extensions/ray-so                                   @gt-codes
 /extensions/rebrandly                                @grikomsn
+/extensions/render                                   @Destiner
 /extensions/ricescore                                @tonka3000
 /extensions/rss-reader                               @fuksman
 /extensions/sabnzbd                                  @jesse-c
