--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -96,6 +96,7 @@
 /extensions/laravel-livewire                         @tafhyseni
 /extensions/large-type                               @gon250
 /extensions/lark                                     @tmkx
+/extensions/lastfm                                   @eggsy
 /extensions/linguee                                  @geekdada
 /extensions/lobsters                                 @dev99problems
 /extensions/lorem-ipsum                              @AntonNiklasson
