refactor(Must): some improvements (#683)
* feat(Must): create extension

* refactor: change "shows" to "series"

* refactor: show list lenghts as subtitles

* refactor: add keywords

* feat(last.fm): create extension

* refactor: display now playing text

* chore: add readme

* style: fix video embed

* refactor: add readme

* Update extensions/must/package.json

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* Update extensions/must/package.json

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

* refactor: uppercase

* refactor: add error types

* refactor: return error when user not found

* refactor: change code to display error

* chore: change readme location

* refactor: proper use of subtitles

* feat: display user not found message on error

* feat: get error message function

* chore: add video

* chore: remove node modules

* chore: update descriptions

* chore: update must description

* chore: move types inside src directory

* refactor: use https connection

* chore: change ts paths

* chore: use local asset instead of url

* refactor: change expression

* chore: remove unused import

* chore: move types folder inside src

* chore: remove unused import

* chore: delete lastfm from this branch

Co-authored-by: Per Nielsen Tikær <pnt@klean.dk>

--- a/extensions/must/package.json
+++ b/extensions/must/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "must",
   "title": "Must",
-  "description": "Your want to watch list on Must and display them directly via Raycast!",
+  "description": "Display your Want to Watch list on Must Movie Tracking app directly on Raycast!",
   "icon": "command-icon.png",
   "author": "eggsy",
   "license": "MIT",
