--- a/extensions/must/tsconfig.json
+++ b/extensions/must/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Node 16",
-  "include": ["src/**/*", "types"],
+  "include": ["src/**/*", "src/types"],
   "compilerOptions": {
     "lib": ["es2020"],
     "module": "commonjs",
@@ -12,9 +12,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx",
-    "typeRoots": ["types"],
+    "typeRoots": ["src/types"],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   }
 }
