--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -83,6 +83,7 @@
 /extensions/homeassistant                            @tonka3000
 /extensions/huggingcast                              @ragnorc
 /extensions/imdb                                     @ryan-exe
+/extensions/inertiajs-documentation                  @danyelkeddah
 /extensions/jetbrains                                @gdsmith
 /extensions/jira-search                              @svenwiegand
 /extensions/jisho                                    @dmacdermott
