--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,7 @@
 # This file is generated. Do not modify directly.
 
 /extensions/1password7                               @khasbilegt
+/extensions/8ball                                    @Gitsack
 /extensions/airport                                  @siddharthsharma94
 /extensions/algolia                                  @valentindotxyz
 /extensions/amazon-aws                               @victor-falcon @Hodglim
