--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -189,4 +189,5 @@
 /extensions/xkcd                                     @maggie-j-liu
 /extensions/youdao-translate                         @tiancheng92
 /extensions/youtube                                  @tonka3000
+/extensions/zeplin-project-search                    @dorukgunes
 /extensions/zotero                                   @sadanand-singh
