--- a/extensions/obsidian/package.json
+++ b/extensions/obsidian/package.json
@@ -5,6 +5,16 @@
   "icon": "command-icon.png",
   "author": "marcjulian",
   "license": "MIT",
+  "preferences": [
+    {
+      "name": "vaultPath",
+      "type": "textfield",
+      "placeholder": "path/to/vault",
+      "title": "Path to Vault",
+      "required": true,
+      "description": "Specify the path or multiple paths (comma separated) to your vault/vaults"
+    }
+  ],
   "commands": [
     {
       "name": "index",
@@ -13,14 +23,6 @@
       "description": "Search, open, view, copy, paste and edit any note in Obsidian",
       "mode": "view",
       "preferences": [
-        {
-          "name": "vaultPath",
-          "type": "textfield",
-          "placeholder": "path/to/vault",
-          "title": "Path to Vault",
-          "required": true,
-          "description": "Specify the path or multiple paths (comma separated) to your vault/vaults"
-        },
         {
           "name": "excludedFolders",
           "type": "textfield",
@@ -51,6 +53,7 @@
           "title": "Primary Action",
           "required": false,
           "description": "Select a primary action to be executed on enter",
+          "defaultValue": "quicklook",
           "data": [
             {
               "title": "Quick Look",
@@ -69,21 +72,44 @@
       "title": "Open Vault",
       "subtitle": "Obsidian",
       "description": "Open a vault in Obsidian",
+      "mode": "view"
+    },
+    {
+      "name": "createnote",
+      "title": "Create Note",
+      "subtitle": "Obsidian",
+      "description": "Create new note",
       "mode": "view",
       "preferences": [
         {
-          "name": "vaults",
+          "name": "prefPath",
           "type": "textfield",
-          "title": "Your vaults",
-          "required": true,
-          "description": "The names of your vaults (comma separated)",
-          "placeholder": "vault1, vault2, ..."
+          "placeholder": "path/to/note",
+          "title": "Default Path",
+          "required": false,
+          "description": "The default path where a new note will be created"
+        },
+        {
+          "name": "prefTag",
+          "type": "textfield",
+          "placeholder": "untagges",
+          "title": "Default Tag",
+          "required": false,
+          "description": "The default selected tag"
+        },
+        {
+          "name": "tags",
+          "type": "textfield",
+          "placeholder": "tag1, tag2, tag3, ...",
+          "title": "Tags",
+          "required": false,
+          "description": "The tags which will be suggested on note creation"
         }
       ]
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.1"
+    "@raycast/api": "^1.27.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
@@ -93,7 +119,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "react-devtools": "^4.19.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "build": "ray build -e dist",
