--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -151,6 +151,7 @@
 /extensions/sketch                                   @aesign
 /extensions/slack-status                             @PitNikola
 /extensions/snake                                    @tonka3000
+/extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
 /extensions/spotify-controls                         @thomaspaulmann
 /extensions/spotify-player                           @mattisssa
