Home Assistant: Fix connection error when instance url contains a trailing slash + Scene support (#682)
* fix trailing slash in instance url

* add missing dependency

* add scene support

* no progress indicator on error

* turn off loading in hook

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -126,6 +126,13 @@
       "subtitle": "Home Assistant",
       "description": "Query Buttons",
       "mode": "view"
+    },
+    {
+      "name": "scenes",
+      "title": "Scenes",
+      "subtitle": "Home Assistant",
+      "description": "Query Scenes",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -166,9 +173,10 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
+    "@raycast/api": "^1.26.0",
     "home-assistant-js-websocket": "^5.11.1",
     "node-fetch": "^2.6.1",
+    "open": "^8.3.0",
     "url-join": "^4.0.1",
     "ws": "^8.2.3"
   },
