--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -54,6 +54,7 @@
 /extensions/domainr                                  @splash-cli
 /extensions/doppler-share-secrets                    @thomaspaulmann
 /extensions/elgato-key-light                         @thomaspaulmann
+/extensions/elm-search                               @NeoVier
 /extensions/emoji                                    @FezVrasta
 /extensions/ens-name-lookup                          @Yukaii
 /extensions/envato                                   @Slllava
