--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -179,6 +179,7 @@
 /extensions/twitch                                   @dieserRobin
 /extensions/twitter                                  @tonka3000
 /extensions/two-factor-authentication-code-generator @cjdenio
+/extensions/ulysses                                  @praveenjuge
 /extensions/unicode-symbols                          @mmazzarolo
 /extensions/unix-timestamp                           @Destiner
 /extensions/uuid-generator                           @jmaeso
