--- a/extensions/ulysses/package.json
+++ b/extensions/ulysses/package.json
@@ -13,6 +13,34 @@
       "subtitle": "Ulysses",
       "description": "Open a new empty sheet in Ulysses",
       "mode": "no-view"
+    },
+    {
+      "name": "new-group",
+      "title": "New Group",
+      "subtitle": "Ulysses",
+      "description": "Create a new group in Ulysses",
+      "mode": "view"
+    },
+    {
+      "name": "open-all",
+      "title": "Open All",
+      "subtitle": "Ulysses",
+      "description": "See all sheets in Ulysses",
+      "mode": "no-view"
+    },
+    {
+      "name": "open-recent",
+      "title": "Open Recent",
+      "subtitle": "Ulysses",
+      "description": "See recently opened files in Ulysses",
+      "mode": "no-view"
+    },
+    {
+      "name": "open-favorites",
+      "title": "Open Favorites",
+      "subtitle": "Ulysses",
+      "description": "See your favorite sheets in Ulysses",
+      "mode": "no-view"
     }
   ],
   "dependencies": {
