--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -168,6 +168,7 @@
 /extensions/terminalfinder                           @yedongze
 /extensions/things                                   @loris
 /extensions/ticktick                                 @viduycheung
+/extensions/timeular                                 @kudrykv
 /extensions/tldr                                     @pomdtr
 /extensions/todo-list                                @maggie-j-liu
 /extensions/todoist                                  @thomaslombart
