--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -80,6 +80,7 @@
 /extensions/google-translate                         @ospfranco
 /extensions/google-trends                            @kkange
 /extensions/grafana                                  @Lp-Francois
+/extensions/graphcdn                                 @mathieudutour
 /extensions/hacker-news                              @thomaspaulmann
 /extensions/harvest                                  @eluce2
 /extensions/hazeover                                 @ratoru
