--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -194,6 +194,7 @@
 /extensions/whatsapp                                 @vimtor
 /extensions/wikipedia                                @vimtor
 /extensions/wistia                                   @ddoria921
+/extensions/wolfram-alpha                            @mathieudutour
 /extensions/xcode                                    @SvenTiigi
 /extensions/xkcd                                     @maggie-j-liu
 /extensions/youdao-translate                         @tiancheng92
