--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,6 +20,7 @@
 /extensions/bitwarden                                @pomdtr
 /extensions/brew                                     @nhojb
 /extensions/brew-services                            @es183923
+/extensions/bttv-emote                               @Aayush9029
 /extensions/bugmenot                                 @Yukaii
 /extensions/buildkite                                @mskelton
 /extensions/calendar                                 @fuksman
