--- a/extensions/sourcegraph/package.json
+++ b/extensions/sourcegraph/package.json
@@ -7,12 +7,35 @@
   "author": "bobheadxi",
   "license": "MIT",
   "keywords": [
+    "sourcegraph",
     "search",
     "code",
-    "sourcegraph",
     "codesearch"
   ],
-  "preferences": [],
+  "preferences": [
+    {
+      "name": "cloudToken",
+      "title": "Sourcegraph Cloud: Access token",
+      "description": "Available under 'Profile' -> 'Access token' on Sourcegraph Cloud",
+      "required": false,
+      "type": "password"
+    },
+    {
+      "name": "customInstance",
+      "title": "Sourcegraph Self-Hosted: Instance URL",
+      "description": "Required to use the Sourcegraph Self-Hosted commands - URL of the Sourcegraph instance you want to connect to",
+      "placeholder": "https://sourcegraph.my-company.com",
+      "required": false,
+      "type": "textfield"
+    },
+    {
+      "name": "customInstanceToken",
+      "title": "Sourcegraph Self-Hosted: Access token",
+      "description": "Required to use the Sourcegraph Self-Hosted commands - available under 'Profile' -> 'Access token' on the Sourcegraph instance",
+      "required": false,
+      "type": "password"
+    }
+  ],
   "commands": [
     {
       "name": "searchCloud",
@@ -21,24 +44,17 @@
       "description": "Search your code and 2M+ public repositories.",
       "mode": "view",
       "keywords": [
+        "sourcegraph",
         "search",
         "code",
-        "sourcegraph",
         "src",
         "cloud"
       ],
       "preferences": [
         {
-          "name": "cloudToken",
-          "title": "Sourcegraph Cloud access token",
-          "description": "Available under 'Profile' -> 'Access token' on Sourcegraph Cloud",
-          "required": false,
-          "type": "password"
-        },
-        {
           "name": "cloudDefaultContext",
-          "title": "Sourcegraph Cloud default context",
-          "description": "Default context to set on all queries",
+          "title": "Default search context",
+          "description": "Default search context to set on all queries",
           "placeholder": "global",
           "required": false,
           "type": "textfield"
@@ -46,53 +62,73 @@
       ]
     },
     {
-      "name": "searchInstance",
+      "name": "searchSelfHosted",
+      "icon": "logo-bw.png",
       "title": "Search Code",
-      "subtitle": "Sourcegraph Instance",
-      "description": "Search code on a specific Sourcegraph instance.",
+      "subtitle": "Sourcegraph Self-Hosted",
+      "description": "Search code on a self-hosted Sourcegraph instance.",
       "mode": "view",
       "keywords": [
+        "sourcegraph",
         "search",
         "code",
-        "sourcegraph",
-        "src"
+        "src",
+        "selfhosted"
       ],
       "preferences": [
         {
-          "name": "customInstance",
-          "title": "URL",
-          "description": "Sourcegraph instance URL",
-          "placeholder": "https://sourcegraph.my-company.com",
-          "required": true,
-          "type": "textfield"
-        },
-        {
-          "name": "customInstanceToken",
-          "title": "Access token",
-          "description": "Available under 'Profile' -> 'Access token' on the Sourcegraph instance",
-          "required": true,
-          "type": "password"
-        },
-        {
           "name": "customInstanceDefaultContext",
           "title": "Default context",
-          "description": "Default context to set on all queries",
+          "description": "Default search context to set on all queries",
           "placeholder": "global",
           "required": false,
           "type": "textfield"
         }
       ]
+    },
+    {
+      "name": "findNotebooksCloud",
+      "title": "Find Search Notebooks",
+      "subtitle": "Sourcegraph Cloud",
+      "description": "Browse search notebooks on Sourcegraph Cloud.",
+      "mode": "view",
+      "keywords": [
+        "sourcegraph",
+        "search",
+        "notebook",
+        "snb",
+        "cloud"
+      ],
+      "preferences": []
+    },
+    {
+      "name": "findNotebooksSelfHosted",
+      "icon": "logo-bw.png",
+      "title": "Find Search Notebooks",
+      "subtitle": "Sourcegraph Self-Hosted",
+      "description": "Browse search notebooks on a self-hosted Sourcegraph instance.",
+      "mode": "view",
+      "keywords": [
+        "sourcegraph",
+        "search",
+        "notebook",
+        "snb",
+        "selfhosted"
+      ],
+      "preferences": []
     }
   ],
   "dependencies": {
     "@bobheadxi/node-eventsource-http2": "^1.1.1",
     "@raycast/api": "^1.27.0",
+    "luxon": "^2.3.0",
     "node-fetch": "^3.0.0",
     "remark": "^14.0.2",
     "sourcegraph": "^25.4.0",
     "strip-markdown": "^5.0.0"
   },
   "devDependencies": {
+    "@types/luxon": "^2.0.9",
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -107,7 +143,7 @@
     "build": "ray build -e dist",
     "dev": "ray develop",
     "lint": "ray lint",
-    "fmt": "prettier --config .prettierrc -w ./",
+    "fmt": "prettier --config .prettierrc -w ./src",
     "raycast-publish": ".scripts/raycast-publish.sh"
   }
 }
