--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -85,6 +85,7 @@
 /extensions/graphcdn                                 @mathieudutour
 /extensions/hacker-news                              @thomaspaulmann
 /extensions/harvest                                  @eluce2
+/extensions/hashnode                                 @dpnick
 /extensions/hazeover                                 @ratoru
 /extensions/hexlify                                  @gkpln3
 /extensions/homeassistant                            @tonka3000
